gitops/state-ui/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: state-ui
  namespace: state-system
  labels:
    app.kubernetes.io/name: state-ui
    app.kubernetes.io/part-of: pki-platform
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: state-ui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: state-ui
        app.kubernetes.io/part-of: pki-platform
    spec:
      serviceAccountName: state-ui
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 101 # nginx
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: state-ui
      containers:
        - name: ui
          image: registry.pki.platform.io/state-ui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            # nginx needs writable dirs even with readOnlyRootFilesystem
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
            - name: nginx-tmp
              mountPath: /tmp
      volumes:
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
        - name: nginx-tmp
          emptyDir: {}
